@@ -60,6 +60,9 @@ ifeq (${CROSS},0)
 	bin-'$(ARCH)'/diet -v -Os gcc -nostdinc -o ttt test/select.c
 	./ttt
 	rm -f ttt
+	bin-'$(ARCH)'/diet -v -Os gcc -nostdinc -static -o ttt debian/tc523086.c
+	./ttt
+	rm -f ttt
 endif
 	test '$(DYN)' -eq 0 || \
 	  $(MAKE) dyn prefix=/usr/lib/diet \
