@@ -4,6 +4,8 @@ dietlibc (0.32-5.2exp1) xexperimental; urgency=low
   * Make Hector the new Maintainer (keeping Gerrit as Uploader)
   * Add myself to Uploaders
   * d/rules: run tests only if not cross compiling
+  * d/tc523086.c: add reduced testcase from pa-risc strstr bug
+  * d/rules: compile and try to execute tc523086 during build
 
  -- Thorsten Glaser <tg@mirbsd.de>  Tue, 08 Mar 2011 20:11:02 +0000
 
